[project]
name = "nl-rdo-woo-web-private"
description = "This python project contains Robot Framework end-to-end tests for the Woo publishing platform."
readme = "README.md"
version = "1.0"
requires-python = ">=3.12"
dependencies = [
    "pyotp>=2.9.0",
    "pyzbar>=0.1.9",
    "robocorp-truststore>=0.9.1",
    "robotframework>=7.1.0",
    "robotframework-archivelibrary>=0.4.3",
    "robotframework-browser>=19.5.1",
    "robotframework-datetime-tz>=1.0.6",
    "robotframework-debuglibrary>=2.5.0",
    "robotframework-dependencylibrary>=4.0.1",
    "robotframework-excellib>=2.0.1",
    "robotframework-faker>=5.0.0",
    "robotframework-otp>=1.1.0",
    "robotframework-pabot>=4.3.2",
    "robotframework-requests>=0.9.7",
    "robotframework-retryfailed>=0.2.0",
    "robotframework-robocop>=6.5",
    "robotframework-tidy>=4.17.0",
    "rpaframework-pdf>=8.0.1",
]

[tool.robocop.lint]
select = [
    "ALL"
]
configure = [
    "line-too-long.line_length=160",
    "empty-lines-between-sections.empty_lines=2",
    "inconsistent-assignment.assignment_sign_type=space_and_equal_sign",
    "sleep-keyword-used.severity=I",
]
ignore = [
    "first-argument-in-new-line",
    "missing-doc-keyword",
    "missing-doc-test-case",
    "sleep-keyword-used",
    "too-long-test-case",
    "too-many-calls-in-test-case",
    "too-many-calls-in-keyword",
]

[tool.robocop.format]
diff = false
overwrite = true
line_length = 120
separator = "space"
space_count = 2
line_ending = "native"
reruns = 3
select = [
    "AddMissingEnd",
    "AlignSettingsSection",
    "AlignTemplatedTestCases",
    "AlignVariablesSection",
    "DiscardEmptySections",
    "InlineIf",
    "MergeAndOrderSections",
    "NormalizeAssignments",
    "NormalizeComments",
    "NormalizeNewLines",
    "NormalizeSectionHeaderName",
    "NormalizeSeparators",
    "NormalizeSettingName",
    "NormalizeTags",
    "OrderSettings",
    "OrderSettingsSection",
    "RemoveEmptySettings",
    "RenameKeywords",
    "RenameTestCases",
    "RenameVariables",
    "ReplaceBreakContinue",
    "ReplaceEmptyValues",
    "ReplaceReturns",
    "ReplaceRunKeywordIf",
    "SplitTooLongLine",
]
configure = [
    "NormalizeAssignments.equal_sign_type=space_and_equal_sign",
    "OrderSettingsSection.new_lines_between_groups=0",
    "NormalizeNewLines.section_lines=2",
    "NormalizeNewLines.test_case_lines=1",
    "NormalizeNewLines.keyword_lines=1",
    "NormalizeNewLines.consecutive_lines=0",
    "RenameVariables.unknown_variables_case=upper",
    "RenameTestCases.capitalize_each_word=True",
]
